<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cam_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="21dp"
    android:paddingEnd="21dp"
    android:background="@color/app_background">

    <TextView
        android:visibility="gone"
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/room_name"
        android:fontFamily="@font/circe_regular"
        android:textColor="@color/text_color"
        android:textSize="21sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner_rect">

        <ImageView
            android:id="@+id/roundedImageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/rounded_corner_rect"
            android:contentDescription="@string/img_des"
            android:scaleType="centerCrop"
            android:src="@drawable/test_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:visibility="invisible"
            android:id="@+id/rec"
            android:contentDescription="@string/img_des"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/rec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:visibility="invisible"
            android:id="@+id/star"
            android:contentDescription="@string/img_des"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="3dp"
            android:src="@drawable/star"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/play_button"
                android:contentDescription="@string/img_des"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/play_button"/>

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/bottom_rounded_corner_rect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/cam_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/circe_regular"
            android:text="@string/cam_num"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
