<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/door_layout"
    android:layout_height="wrap_content"
    android:background="@color/app_background"
    android:gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cam_video"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/roundedImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/rounded_corner"
                android:contentDescription="@string/img_des"
                android:scaleType="centerCrop"
                android:src="@drawable/int_test"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/favorite"
                android:visibility="invisible"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/img_des"
                android:layout_margin="3dp"
                android:src="@drawable/star"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/play_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="160dp"
                android:contentDescription="@string/img_des"
                android:src="@drawable/play_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/white_back_rounded_corner"
            android:paddingHorizontal="16dp"
            android:paddingVertical="21dp"
            app:layout_constraintTop_toBottomOf="@+id/cam_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/door_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-3dp"
                    android:fontFamily="@font/circe_regular"
                    android:text="@string/intercom"
                    android:textColor="@color/text_color"
                    android:textSize="17sp" />

                <TextView
                    android:visibility="invisible"
                    android:id="@+id/status_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circe_regular"
                    android:text="@string/network"
                    android:textColor="@color/network_color"
                    android:textSize="14sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/door_locker"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/img_des"
                android:src="@drawable/lock_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
